--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
   </nav>
 
   <main>
+    <a href="work/des186.html"><img src="images/des186.png" alt="Signage System" height="300" width="300"></a>
     <a href="work/des157-madlib.html"><img src="images/madlib.jpg" alt="MadLib"></a>
     <a href="work/des157.html"><img src="images/des157.jpg" alt="JavaScript"></a>
     <a href="work/des116.html"><img src="images/des116.jpg" alt="Branding"></a>
@@ -33,7 +34,7 @@
     <a href="work/des191-2.html"><img src="images/des191-part2.jpg" alt="UI/UX"></a>
     <a href="work/des117.html"><img src="images/des117-part1.jpg" alt="Portfolio Website"></a>
     <a href="work/des117-2.html"><img src="images/des117-part2.jpg" alt="Portal Page"></a>
-    <a href="work/des117-3.html"><img src="images/des117-part3.jpg" alt="Blog Page"></a>
+    <!-- <a href="work/des117-3.html"><img src="images/des117-part3.jpg" alt="Blog Page"></a> -->
     <!-- <a href="work/des37.html"><img src="images/des37.jpg" alt="Processing"></a> -->
   </main>
 
