--- a/homepage-2.html
+++ b/homepage-2.html
@@ -34,6 +34,7 @@
     <a href="work/des117.html"><img src="images/des117-part1.jpg" alt="Portfolio Website"></a>
     <a href="work/des117-2.html"><img src="images/des117-part2.jpg" alt="Portal Page"></a>
     <a href="work/des117-3.html"><img src="images/des117-part3.jpg" alt="Blog Page"></a> -->
+    <a href="work/des117-3.html"><img src="images/des117-part3.jpg" alt="Blog Page"></a>
     <a href="work/des37.html"><img src="images/des37.jpg" alt="Processing"></a>
   </main>
 
